fixed gaps

--- a/08-24-2015/homework/css/style.css
+++ b/08-24-2015/homework/css/style.css
@@ -141,6 +141,7 @@ section h1{
 }
 
 section h2 {
+  margin:0;
   text-align:left;
   padding-top:15px;
   padding-bottom:10px;
@@ -153,6 +154,7 @@ section h2 {
 }
 
 section ul {
+  margin:0;
   padding-left:20%;
   padding-bottom:30px;
   list-style-type:circle;
@@ -167,6 +169,7 @@ section.testimonial {
   width:100%;
   margin-bottom:5px;
   padding-top:50px;
+  margin:0;
 }
 
 section p{
@@ -194,6 +197,7 @@ section.signup {
   width:100%;
   margin-bottom:5px;
   padding-top:20px;
+  margin:0;
 
 }
 
